# zelda

./: Cargo.toml  default.nix  flake.nix  result  shell.nix  zelda.toml
src/: config.rs  db.rs  main.rs
src/web/: index.rs
web/: .env.development  default.nix  package-lock.json  package.json
web/src/: App.svelte  app.css
web/src/lib/: Albums.svelte  Footer.svelte  Tracks.svelte  store.js
