[package]
name = "zelda"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

actix-web = { version = "4", features = ["rustls"] }
actix-cors = "0.7"
actix-files = "0.6"

sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }

audiotags = "0.5"
urlencoding = "2"
